# group862_mini_project

./: .gitignore  README.md  frames.gv  mia_hand_test.urdf  new_world  requirements.txt
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/mia_hand_description/: remap_mia_joint_states
devel/lib/mia_hand_driver/: mia_hand_driver_node
devel/lib/mia_hand_ros_control/: Mia_hw_node
devel/lib/mp_world/: point_cloud_segmentation.py  publish_camera_info.py
devel/lib/pkgconfig/: mia_hand_bringup.pc  mia_hand_description.pc  mia_hand_driver.pc  mia_hand_gazebo.pc  mia_hand_moveit_config.pc  mia_hand_msgs.pc  mia_hand_ros_control.pc  mp_world.pc  realsense_gazebo_plugin.pc
src/my_gazebo_world/: CMakeLists.txt  package.xml
src/my_gazebo_world/config/: mp_world.rviz
src/my_gazebo_world/launch/: mp_world.launch
src/my_gazebo_world/scripts/: point_cloud_segmentation.py  point_cloud_segmentation_debug.py  publish_camera_info.py
src/my_gazebo_world/worlds/: mini_project_world  mp_world.sdf
src/pcl_processing/: CMakeLists.txt  package.xml
src/pcl_processing/config/: default.yaml  grasp_params.yaml  pcl_processing_params.yaml
src/pcl_processing/data/: frame_00300.pcd  frame_00780.pcd  frame_01020.pcd  frame_01050.pcd  frame_01200.pcd  frame_02010.pcd  frame_02160.pcd  frame_02280.pcd  frame_02340.pcd  head.pcd  head.ply  input.ply
src/pcl_processing/launch/: pcl_processing.launch
src/pcl_processing/src/: BoxGraspLogic.cpp  CylinderGraspLogic.cpp  GraspPoseEstimator.cpp  PCLProcessor.cpp  PCLProcessorConfig.cpp  SphereGraspLogic.cpp  (+3 more)
(+18 files in other folders)
